<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.esh.Home">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:contentDescription="@string/app_name"
        android:src="@drawable/home_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/enter_your_Age"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints="00"
            android:hint="@string/age"
            android:inputType="number"
            android:padding="16dp"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_restingHeartRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resting_Heart_Rate"
            android:textColor="@color/colorSecondary"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_restingHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/get_RHR"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/colorSecondary"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_targetHeartRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_workout"
            android:textColor="@color/colorSecondary"
            android:textSize="22sp" />

    </LinearLayout>


</LinearLayout>
